--- a/cubo-app/package.json
+++ b/cubo-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cubejs": "^1.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
